AG-115 - Replace Class.newInstance with Constructor.newInstance